tests/rosetta/transpiler/Pascal/arithmetic-derivative.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/arithmetic-derivative.pas
arithmetic-derivative.pas(42,10) Fatal: Syntax error, "identifier" expected but "REPEAT" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
